commit and push the changes after modification